# Image_Filter_Resize_Service

./: Makefile  README.md  docker-compose.yml
server/: Dockerfile  Makefile  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: dependencies.py
server/app/api/endpoints/: health.py  images.py
server/app/api/middlewares/: logging.py
server/app/core/: config.py  exceptions.py  logging.py
server/app/db/elasticsearch/: client.py
server/app/db/redis/: client.py
server/app/models/: common.py  image.py  job.py
server/app/services/image/: processor.py  validation.py
server/app/services/kafka/: consumer.py  producer.py  schemas.py
server/app/services/storage/: minio.py
